# Programinhas

./: README.md  pyproject.toml
Docs/: COMMITS.md  extract_fsa_data.md  extract_word_data.md  search_for_names.md
Scripts/: extract_fsa_data.py  extract_word_data.py  search_for_names.py
Sheets/: dados_acesso.xlsx  nomes_completos.xlsx  output.xlsx
